# blog

./: db.sqlite3  posts.json  pyproject.toml
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/: main.css
blog/templates/blog/: about.html  base.html  home.html  post_detail.html
my_site/: settings.py  urls.py
users/: models.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: register.html
