[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Gajijka <galimovgadjimurad2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-bootstrap5 = "^24.2"
gunicorn = "^22.0.0"
django-crispy-forms = "^2.1"
pillow = "^10.3.0"
crispy-bootstrap4 = "^2024.1"
crispy-bootstrap5 = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
